02-kustomize/base/ingress.yml
# ----- Ingress -----
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello
  labels:
    app: hello
  annotations:
    link.argocd.argoproj.io/external-link: http://yolo.74.220.20.142.sslip.io
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`yolo.74.220.20.142.sslip.io`)
    kind: Rule
    services:
    - name: hello
      port: 80
